10 Control Structures & Boolean Logic | README's Index Updated.

--- a/JS Basics/cs_bl.html
+++ b/JS Basics/cs_bl.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Control Structure: if else</h1>
     <p><em>Check the developer console for the log</em></p>
-    <script src="./scripts/if_else.js" type="text/javascript"></script>
+    <script src="./scripts/cs_bl.js" type="text/javascript"></script>
 </body>
 </html>
