--- a/JS Basics/cs_bl.html
+++ b/JS Basics/cs_bl.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>JS Basics: Control Structure: if else</title>
+    <title>JS Basics: Control Structures & Boolean Logic</title>
 </head>
 <body>
-    <h1>Control Structure: if else</h1>
+    <h1>Control Structures & Boolean Logic</h1>
     <p><em>Check the developer console for the log</em></p>
     <script src="./scripts/cs_bl.js" type="text/javascript"></script>
 </body>
