13 "Coding Challenge II" completed | title in challenge_1.html changed | README's Index Updated.

--- a/JS Basics/challenge_1.html
+++ b/JS Basics/challenge_1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>JS Basics: Challenge 1</title>
+    <title>JS Basics: Coding Challenge I</title>
 </head>
 <body>
-    <h1>Challenge 1</h1>
+    <h1>Coding Challenge I</h1>
     <p>
         Mark and John are trying to compare their BMI (Body Mass Index), which is calculated using the formula: <br/>BMI = mass / height^2 = mass / (height * height). (mass in kg and height in meter).
         <ol>
