30 README's Index Updated: Added JS-DOM: The Pig Game for "Pig Game (Version 1)"'s link in the Index. fork information added in index.html

--- a/JS-DOM/index.html
+++ b/JS-DOM/index.html
@@ -1,3 +1,7 @@
+<!-- Forked from:
+        https://github.com/jonasschmedtmann/complete-javascript-course/blob/master/4-DOM-pig-game/starter/index.html
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
