--- a/JS-DOM/index.html
+++ b/JS-DOM/index.html
@@ -14,6 +14,10 @@
     </head>
 
     <body>
+        <div class="info">
+            <h1>The Pig Game</h1>
+            <a href="#" id="rules">&lt;Rules of the Game&gt;</a>
+        </div>
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
