--- a/JS-Objects-Functions-Advanced/project-budgety/index.html
+++ b/JS-Objects-Functions-Advanced/project-budgety/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="style.css">
+        <link rel="icon" href="rupee-indian.png"/>
         <title>Budgety</title>
     </head>
     <body>
