--- a/JS-Objects-Functions-Advanced/project-budgety/index.html
+++ b/JS-Objects-Functions-Advanced/project-budgety/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="style.css">
-        <link rel="icon" href="rupee-indian.png"/>
+        <link type="text/css" rel="stylesheet" href="./style/style.css">
+        <link rel="icon" href="./img/rupee-indian.png"/>
         <title>Budgety</title>
     </head>
     <body>
@@ -43,8 +43,8 @@
             <div class="add">
                 <div class="add__container">
                     <select class="add__type">
-                        <option value="inc" selected>+</option>
-                        <option value="exp">-</option>
+                        <option value="income" selected>+</option>
+                        <option value="expense">-</option>
                     </select>
                     <input type="text" class="add__description" placeholder="Add description">
                     <input type="number" class="add__value" placeholder="Value">
@@ -121,6 +121,6 @@
             
         </div>
         
-        <script src="app.js"></script>
+        <script src="./script/app.js"></script>
     </body>
 </html>
