76 Event Delegation in Practice - Learnings    1. How to use Event Delegation in Practice;    2. How to use IDs in HTML to connect the UI to the Data Model;    3. How to use the parentNode property for DOM traversing; - README Partially Updated: link for updated version of app.js inactive.

--- a/JS-Objects-Functions-Advanced/project-budgety/index.html
+++ b/JS-Objects-Functions-Advanced/project-budgety/index.html
@@ -64,7 +64,9 @@
                             <div class="right clearfix">
                                 <div class="item__value">+ 2,100.00</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">
+                                        <i class="ion-ios-close-outline"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +76,9 @@
                             <div class="right clearfix">
                                 <div class="item__value">+ 1,500.00</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">
+                                        <i class="ion-ios-close-outline"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +101,9 @@
                                 <div class="item__value">- 900.00</div>
                                 <div class="item__percentage">21%</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">
+                                        <i class="ion-ios-close-outline"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +114,9 @@
                                 <div class="item__value">- 435.28</div>
                                 <div class="item__percentage">10%</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">
+                                        <i class="ion-ios-close-outline"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
