--- a/Next-Gen-JS-Intro-to-ES6/arrow_func_this.html
+++ b/Next-Gen-JS-Intro-to-ES6/arrow_func_this.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="styles/arrow_fun_this.css"/>
+    <link rel="stylesheet" href="styles/arrow_func_this.css"/>
     <title>Next Generation JS: Intro to ES6 - Arrow Functions - Lexical "this" keyword</title>
 </head>
 <body>
