132 Node.js and NPM - Added 7.3 named as "A Modern Setup Installing Node.js and NPM"
README Update
- Link for nodejs.html and nodejs.pdf (view and download) added in the Index at 7.3

--- a/Modern-JS-ES6-NPM-Babel-Webpack/overview.html
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/overview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!-- Boostrap 4 -->
+    <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Modern JS: Overview</title>
 </head>
@@ -14,7 +14,7 @@
             Open <a href="https://github.com/Ch-sriram/JavaScript/blob/master/Modern-JS-ES6-NPM-Babel-Webpack/overview.html">overview.html</a> for the markup | Images are taken from: <a href="https://www.udemy.com/the-complete-javascript-course/">JS Course by Jonas Schmedtmann</a>
         </p>
 
-        <img src="./assets/overview.png" alt="overview" class="img-thumbnail mb-3">
+        <img src="./assets/images/overview.png" alt="overview" class="img-thumbnail mb-3">
 
         <p class="lead text-left">
             Up until now, we have used JavaScript in the old school way. But now, we will learn how to use JavaScript
