159 Forkify: Setting Up Pagination - Added 7.7.7 named as "Setting Up Pagination Using Element.closest(), Event Delegation and data-* attribute in HTML5"
README Updates
- master links added for ./src/js/index.js, ./src/js/models/Search.js, ./src/js/views/searchView.js and ./src/js/views/base.js in Index at 7.7.7
- master links replaced with hashed links for ./src/js/index.js, ./src/js/models/Search.js, ./src/js/views/searchView.js and ./src/js/views/base.js in Index at 7.7.6.3

--- a/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/src/index.html
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/src/index.html
@@ -429,7 +429,7 @@
             </ul>
 
             <div class="copyright">
-                Design &copy; by <a href="https://github.com/jonasschmedtmann/complete-javascript-course/blob/master/9-forkify/starter/src/index.html" target="_blank" class="link">Jonas Schmedtmann</a> <br> 
+                Design &copy; by <a href="https://github.com/jonasschmedtmann/complete-javascript-course/tree/master/9-forkify/starter" target="_blank" class="link">Jonas Schmedtmann</a> <br> 
                 Powered by <a href="https://forkify-api.herokuapp.com" target="_blank" class="link">forkify-api.herokuapp.com</a>.
             </div>
 
