192 Forkify: Persistent Data w. localStorage() and List (Model, View & Controller for Delete All Items) - Added 7.7.18 named as "Implementing Persistent Data WIth localStorage() API and Implementing the Delete All Shopping Items Functionality in List's Model, View & Controller"

--- a/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/src/index.html
+++ b/Modern-JS-ES6-NPM-Babel-Webpack/forkify_project/src/index.html
@@ -343,6 +343,9 @@
 
         <div class="shopping">
             <h2 class="heading-2">My Shopping List</h2>
+            
+            <div id="delete-all-btn"></div>
+            <!-- <button>Delete All Items</button> this goes inside the div above-->
 
             <ul class="shopping__list">
 
